--- a/frontend/src/components/app/App.scss
+++ b/frontend/src/components/app/App.scss
@@ -1,9 +1,11 @@
-.navbar {
-  background-color: #05172f;
-  height: 50px;
-}
+@import '../../styles/variables.scss';
 
-.logo {
-  color: white;
-  font-size: 1.5em;
+.navbar {
+  background-color: $takeoffs-blue;
+  height: 50px;
+
+  .logo {
+    color: white;
+    font-size: 1.5em;
+  }
 }
