A little better icon/titling

--- a/frontend/src/components/app/App.scss
+++ b/frontend/src/components/app/App.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables.scss';
 
 .navbar {
+  font-family: Montserrat;
   background-color: $takeoffs-blue;
   height: 50px;
 
