more styling in accordance, setup epic

--- a/frontend/src/components/material-selector/project-info/ProjectInfo.scss
+++ b/frontend/src/components/material-selector/project-info/ProjectInfo.scss
@@ -1,12 +1,18 @@
 @import '../../../styles/variables.scss';
 
 .infotron {
-  height: 200px;
+  padding: 0;
+
+  .pad {
+    padding: $material-padding;
+    margin-bottom: 20px;
+  }
+  height: 250px;
+  margin-bottom: 4px;
   background-color: white;
   border-bottom: 2px solid $takeoffs-blue;
   box-shadow: 0 4px 2px -2px gray;
   border-radius: 0px !important;
-  padding: 0 60px 0 60px;
 
   .project-name {
     padding-top: 30px;
@@ -18,5 +24,12 @@
     align-items: center;
     margin-right: 10px;
     color: gray;
+  }
+
+  .padless {
+    padding: 0 !important;
+    .nav-item {
+      margin-left: 120px;
+    }
   }
 }
