--- a/frontend/src/components/material-selector/project-info/ProjectInfo.scss
+++ b/frontend/src/components/material-selector/project-info/ProjectInfo.scss
@@ -7,7 +7,7 @@
     padding: $material-padding;
     margin-bottom: 20px;
   }
-  height: 250px;
+  height: $project-infotron-height;
   margin-bottom: 4px;
   background-color: white;
   border-bottom: 2px solid $takeoffs-blue;
