start showing products for categories

--- a/frontend/src/components/material-selector/selector/Selector.scss
+++ b/frontend/src/components/material-selector/selector/Selector.scss
@@ -3,5 +3,5 @@
 .main {
   padding: $material-padding;
   background-color: $takeoffs-gray;
-  height: calc(100% - #{$project-infotron-height});
+  height: 100%;
 }
