--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -2,3 +2,4 @@ $takeoffs-blue: #05172f;
 $takeoffs-gray: #ebeff2;
 $material-padding: 0 60px 0 60px;
 $project-infotron-height: 250px;
+$card-padding: 20px 20px 0 20px;
