--- a/frontend/src/components/material-selector/cart-item/CartItem.scss
+++ b/frontend/src/components/material-selector/cart-item/CartItem.scss
@@ -1,6 +1,13 @@
 @import '../../../styles/variables.scss';
 
 .item {
+  .remove {
+    cursor: pointer;
+    position: absolute;
+    top: 1px;
+    right: 1px;
+  }
+
   height: 200px;
   display: grid;
   grid-template-columns: 150px 1fr;
