--- a/frontend/src/components/material-selector/cart-item/CartItem.scss
+++ b/frontend/src/components/material-selector/cart-item/CartItem.scss
@@ -15,6 +15,7 @@
   grid-gap: 20px;
   padding: $card-padding;
   .title {
+    font-size: 14px;
     grid-column-start: 2;
   }
   .product-picture {
@@ -32,16 +33,16 @@
       float: right;
       width: 75px;
       margin-top: 3px;
-      margin-right: 50px;
+      margin-right: 10px;
     }
     .add-item {
-      width: 100px;
+      width: 75px;
     }
 
     .total {
-      font-size: 1.25em;
-      margin-top: 5px;
-      margin-right: 35px;
+      font-weight: bold;
+      margin-top: 10px;
+      margin-right: 10px;
     }
   }
 }
