--- a/frontend/src/components/material-selector/project-info/ProjectInfo.scss
+++ b/frontend/src/components/material-selector/project-info/ProjectInfo.scss
@@ -6,6 +6,7 @@
   .pad {
     padding: $material-padding;
     margin-bottom: 20px;
+    height: 150px;
   }
   height: $project-infotron-height;
   margin-bottom: 4px;
@@ -15,7 +16,7 @@
   border-radius: 0px !important;
 
   .project-name {
-    padding-top: 30px;
+    padding: 30px 0 30px 0;
     display: flex;
   }
 
