More styling polishing

--- a/frontend/src/components/material-selector/order-project/OrderProject.scss
+++ b/frontend/src/components/material-selector/order-project/OrderProject.scss
@@ -8,7 +8,7 @@
     margin-left: 50px;
   }
   .actions {
-    display: flex;
+    font-size: 0.75em;
   }
   .item-count {
     margin-right: 10px;
