One more minor styling

--- a/frontend/src/components/material-selector/order-project/OrderProject.scss
+++ b/frontend/src/components/material-selector/order-project/OrderProject.scss
@@ -10,6 +10,9 @@
   .action {
     font-size: 0.75em;
   }
+  .purchase {
+    margin-right: 20px;
+  }
   .item-count {
     margin-right: 10px;
   }
